# svgconvert-dg

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/svg_converter/: converter.py  script.sh  trace_skeleton.py
tests/: test_converter.py
