[tool.poetry]
name = "svg-converter"
version = "0.1.0"
description = "A module to convert generated SVGs into practical SVGs."
authors = ["Thembo Jonathan <jonathan.thembo@aibos2100.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
